--- a/assignment/index.html
+++ b/assignment/index.html
@@ -7,10 +7,10 @@
   </head>
   <body>
     <header>
-      <h1>Unit 5, Part 2 - HTML/CSS Practice</h1>
-      <h2>Ken's Record Shop</h2>
+      <h1 class="center">Unit 5, Part 2 - HTML/CSS Practice</h1>
+      <h2 class="center">Ken's Record Shop</h2>
     </header>
-    <main>
+    <main id="lightColor">
       <p>Look at my cool music page.</p>
     </main>
     <!-- Create an unordered list with any questions you have -->
